crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__geo_sort__geo_sort_mixed_with_words-2.snap
---
source: milli/src/search/new/tests/geo_sort.rs
expression: "format!(\"{scores:#?}\")"
---
[
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 1,
            },
        ),
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        0.0,
                        0.0,
                    ],
                ),
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 1,
            },
        ),
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        -89.0,
                        0.0,
                    ],
                ),
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 1,
            },
        ),
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        0.0,
                        178.0,
                    ],
                ),
            },
        ),
    ],
]
