crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__geo_sort__geo_sort_with_following_ranking_rules-2.snap
---
source: crates/milli/src/search/new/tests/geo_sort.rs
expression: "format!(\"{scores:#?}\")"
---
[
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        2.0,
                        2.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(10.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        2.0,
                        2.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(9.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        2.0,
                        2.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(8.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        2.0,
                        2.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(7.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        2.0,
                        2.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(6.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        2.0,
                        2.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(5.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        5.0,
                        5.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(10.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        5.0,
                        5.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(9.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        5.0,
                        5.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(8.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: Some(
                    [
                        5.0,
                        5.0,
                    ],
                ),
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Number(7.0),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
        Sort(
            Sort {
                field_name: "score",
                ascending: false,
                redacted: false,
                value: Null,
            },
        ),
    ],
]
