crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__geo_sort__geo_sort_without_any_geo_faceted_documents-2.snap
---
source: milli/src/search/new/tests/geo_sort.rs
expression: "format!(\"{scores:#?}\")"
---
[
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 1,
            },
        ),
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 1,
            },
        ),
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 1,
            },
        ),
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: true,
                value: None,
            },
        ),
    ],
]
